Experiment with spelling Experiments correctly

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Some Assembly Required
 
-Random collection of Assembly Language Expirements and Examples
+Random collection of Assembly Language Experiments and Examples
 
 Expect : gas at&t Linux x86 
 
